@@ -10,6 +10,13 @@
 * restrict comments to themselves
 
 
+# 0.3.17 (2025-10-01)
+
+- improved `util/start-day`
+- added env var `START_DAY`
+- added `compose.yml`
+- added `:jvm-opts  ["--enable-native-access=ALL-UNNAMED"` to alias `run-m`
+
 # 0.3.16 (2025-09-27)
 
 - improved `admin` page
